--- a/server/templates/about.html
+++ b/server/templates/about.html
@@ -7,7 +7,7 @@
   <body>
     {% extends "template.html" %}
     {% block content %}
-    <h1>About</h1>
+    <p class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eros tellus, mattis vitae ullamcorper ac, laoreet at neque. Aliquam at purus tempus ligula facilisis accumsan. Sed aliquam molestie suscipit. Nulla id convallis velit. Sed condimentum sapien sit amet velit ultricies, eu egestas arcu feugiat. Donec vitae elit tortor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris blandit ornare ligula sed venenatis. Vestibulum ut purus sapien. Phasellus consectetur vitae turpis sed dignissim. Vivamus lacinia massa ut tortor cursus volutpat. Quisque porttitor justo risus, et lacinia libero feugiat eu. Etiam consectetur mi in posuere placerat. Cras eleifend aliquet nunc in blandit.</p>
     {% endblock %}
   </body>
 </html>
