--- a/server/static/css/template.css
+++ b/server/static/css/template.css
@@ -1,4 +1,64 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+.container {
+    color: white;
+    display: flex;
+    width: 100vw;
+    background-color: rgb(111, 123, 217);
+    height: 50px;
+    align-items: center;
+    position: sticky;
+}
+
+.container h1 {
+    padding: 0 20px;
+    margin-left: 30px;
+}
+
+.menu {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+}
+
+.menu li {
+    height: 100%;
+}
+
+.menu li a {
+    color: white;
+    text-decoration: none;
+    padding: 0 10px;
+    margin-left: 30px;
+    height: 100%;
+
+}
+
 img {
-    width: auto;
-    height: 100px;
+    width: 70%;
+    height: auto;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    align-self: center;
+}
+
+th {
+    height: 70px;
+}
+
+th, td {
+    text-align: center;
+}
+
+tr:nth-child(even) {background-color: #f2f2f2;}
+
+.about {
+    margin: 100px;
 }
