--- a/server/templates/template.html
+++ b/server/templates/template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Flask Parent Template</title>
-    
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/template.css') }}">
     
 </head>
@@ -11,12 +11,12 @@
     <header>
       <div class="container">
         <h1 class="logo">Anelyza</h1>
-        <strong><nav>
+        <nav>
           <ul class="menu">
-            <li><a href="{{ url_for('log') }}">Home</a></li>
+            <li><a href="{{ url_for('log') }}">Logs</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
           </ul>
-        </nav></strong>
+        </nav>
       </div>
     </header>
     
